# search

./: .gitignore  README.md  bm25.py  feed.py  hybrid.py  main.py  pyproject.toml  ui.py
static/: app.js  styles.css
templates/: index.html
vespa_app_hybrid/: services.xml
vespa_app_hybrid/schemas/: doc.sd
